# markupify

./: .pre-commit-config.yaml  README.md  pre-commit-requirements.txt  pyproject.toml  set_pre_commit.sh  setup.py
.github/workflows/: pylint.yml  release.yml  tests.yml
markupify/: __init__.py  page.py  tags.py
